--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "modern start",
     "new": "modern new",
     "lint": "modern lint",
-    "prepare": "husky install",
     "upgrade": "modern upgrade"
   },
   "engines": {
@@ -27,20 +26,20 @@
     "dist/"
   ],
   "dependencies": {
-    "@modern-js/runtime": "1.22.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@modern-js/runtime": "2.6.0",
+    "element-theme-chalk": "^2.15.13",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@modern-js/app-tools": "1.22.7",
-    "@modern-js/tsconfig": "1.22.7",
-    "rimraf": "^3.0.2",
+    "@modern-js/app-tools": "2.6.0",
+    "@modern-js/tsconfig": "2.6.0",
+    "@types/node": "^14.18.36",
+    "@types/react": "^17.0.53",
+    "@types/react-dom": "^17.0.19",
     "lint-staged": "^11.2.6",
-    "prettier": "^2.6.2",
-    "husky": "^8.0.0",
-    "typescript": "^4",
-    "@types/react": "^17",
-    "@types/react-dom": "^17",
-    "@types/node": "^14"
+    "prettier": "^2.8.4",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.9.5"
   }
 }
